--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>Virtual Folio - Portfolio HTML5</title>
+  <title> Portafolio </title>
   
   <link rel="shortcut icon" type="image/x-icon" href="assets/icon/favicon.ico">
   
@@ -68,9 +68,9 @@
   
   <div class="topbar-nav fixed-top">
     <div class="brand">
-      <img src="assets/icon/favicon.ico" alt="" width="30" height="30">
+      <img src="" alt="" width="30" height="30">
     </div>
-    <h3 class="ml-1">Gram</h3>
+    <h3 class="ml-1"></h3>
     <button class="btn-fab toggle-menu mr-3"><span class="ti-menu"></span></button>
   </div>
   
